# mydictionary

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requests.hpp
Request/: CMakeLists.txt  Request.cpp  Request.hpp
